<resources>
    <string name="app_name">FlameChat</string>
    <string name="logo">logo</string>
    <string name="need_an_account">NEED AN ACCOUNT ?</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="fill_your_details">Fill your details</string>
    <string name="friends">Friends</string>
    <string name="chats">Chats</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="profile">Profile</string>
    <string name="user_verified_or_not">user verified or not</string>
    <string name="logout">LogOut</string>
    <string name="change_status">Change Status</string>
    <string name="type_your_message">Type your message</string>
</resources>
