<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    tools:layout_editor_absoluteY="25dp">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:met_errorColor="?attr/colorError"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="Username"
        app:met_floatingLabelTextColor="@color/colorPrimary"
        app:met_textColorHint="@color/dark_gray" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_create_account"
        app:met_errorColor="?attr/colorError"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="Email"
        app:met_floatingLabelTextColor="@color/colorPrimary"
        app:met_textColorHint="@color/dark_gray" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_create_account"
        app:met_errorColor="?attr/colorError"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="Password"
        app:met_floatingLabelTextColor="@color/colorPrimary"
        app:met_textColorHint="@color/dark_gray" />

    <Button
        android:id="@+id/createBtnCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_create_account" />

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/fill_your_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_toolbar" />


</android.support.constraint.ConstraintLayout>